--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arpit078/preactjs",
-  "version": "1.0.5",
+  "version": "2.0",
   "description": "A single page frontend vanilla javascript framework that can implement virtual dom ,component reuse and easier to get started compared that to reactJS",
   "main": "cli.js",
   "bin": {
@@ -13,6 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/Arpit078/preactjs.git"
   },
+  "type": "module",
   "keywords": [
     "preactjs",
     "ReactJS for vanillaJS",
@@ -20,7 +21,8 @@
     "JSX in vanillaJS"
   ],
   "author": "Arpit078",
-  "license": "MIT"
-  
-  
+  "license": "MIT",
+  "dependencies": {
+    "@arpit078/preactjs": "^1.1.0"
+  }
 }
